updated encoding